// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentAccess renders 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-root PodBrowser-circle PodBrowser-avatar"
  >
    <img
      alt="Alice"
      class="PodBrowser-img"
      src="http://example.com/alice.jpg"
    />
  </div>
  <p
    class="PodBrowser-root PodBrowser-detailText PodBrowser-body1"
    data-testid="agent-web-id"
  >
    Alice
  </p>
  <form
    class="PodBrowser-form"
  >
    <div
      class="PodBrowser-container"
    >
      <button
        class="PodBrowser-root PodBrowser-root PodBrowser-text PodBrowser-summary"
        data-testid="permissions-dropdown-button"
        tabindex="0"
        type="button"
      >
        <span
          class="PodBrowser-label"
        >
          <span />
          <span
            class="PodBrowser-endIcon PodBrowser-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="PodBrowser-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
              />
            </svg>
          </span>
        </span>
        <span
          class="PodBrowser-root"
        />
      </button>
      <section
        class="PodBrowser-selectionClosed"
      >
        <ul
          class="PodBrowser-root PodBrowser-padding"
        >
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root"
              data-testid="permission-checkbox-view"
            >
              <span
                aria-disabled="false"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-colorSecondary"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    name="view"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="PodBrowser-root"
                />
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
              >
                View
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root"
              data-testid="permission-checkbox-edit"
            >
              <span
                aria-disabled="false"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-colorSecondary"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    name="edit"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="PodBrowser-root"
                />
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
              >
                Edit
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root"
              data-testid="permission-checkbox-append"
            >
              <span
                aria-disabled="false"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-colorSecondary"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    name="append"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="PodBrowser-root"
                />
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
              >
                Append
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root"
              data-testid="permission-checkbox-control"
            >
              <span
                aria-disabled="false"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-colorSecondary"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    name="control"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="PodBrowser-root"
                />
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
              >
                Control
              </span>
            </label>
          </li>
        </ul>
        <button
          class="PodBrowser-button"
          type="submit"
        >
          Save
        </button>
      </section>
    </div>
  </form>
</DocumentFragment>
`;

exports[`AgentAccess renders a 'remove' button if it's unable to load profile 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-alert-container"
  >
    <div
      class="PodBrowser-root PodBrowser-root PodBrowser-alertBox PodBrowser-standardError PodBrowser-elevation0"
      role="alert"
    >
      <div
        class="PodBrowser-icon"
      >
        <svg
          aria-hidden="true"
          class="PodBrowser-root PodBrowser-fontSizeInherit"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
      </div>
      <div
        class="PodBrowser-message PodBrowser-alertMessage"
      >
        Unable to load http://example.com/webId#me
      </div>
      <div
        class="PodBrowser-action"
      >
        <button
          class="PodBrowser-root PodBrowser-root PodBrowser-text PodBrowser-bold-button PodBrowser-colorInherit PodBrowser-textSizeSmall PodBrowser-sizeSmall"
          data-testid="try-again-button"
          tabindex="0"
          type="button"
        >
          <span
            class="PodBrowser-label"
          >
            Try again
          </span>
          <span
            class="PodBrowser-root"
          />
        </button>
      </div>
    </div>
    <div
      class="PodBrowser-avatar-container"
    >
      <div
        class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-colorDefault"
      >
        <svg
          aria-hidden="true"
          class="PodBrowser-root PodBrowser-fallback"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <p
        class="PodBrowser-root PodBrowser-detailText PodBrowser-body1"
        data-testid="agent-web-id"
      >
        http://example.com/webId#me
      </p>
      <button
        data-testid="remove-button"
        type="button"
      >
        Remove
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AgentAccess renders an error message with a 'try again' button if it's unable to load profile 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-alert-container"
  >
    <div
      class="PodBrowser-root PodBrowser-root PodBrowser-alertBox PodBrowser-standardError PodBrowser-elevation0"
      role="alert"
    >
      <div
        class="PodBrowser-icon"
      >
        <svg
          aria-hidden="true"
          class="PodBrowser-root PodBrowser-fontSizeInherit"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
      </div>
      <div
        class="PodBrowser-message PodBrowser-alertMessage"
      >
        Unable to load http://example.com/webId#me
      </div>
      <div
        class="PodBrowser-action"
      >
        <button
          class="PodBrowser-root PodBrowser-root PodBrowser-text PodBrowser-bold-button PodBrowser-colorInherit PodBrowser-textSizeSmall PodBrowser-sizeSmall"
          data-testid="try-again-button"
          tabindex="0"
          type="button"
        >
          <span
            class="PodBrowser-label"
          >
            Try again
          </span>
          <span
            class="PodBrowser-root"
          />
        </button>
      </div>
    </div>
    <div
      class="PodBrowser-avatar-container"
    >
      <div
        class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-colorDefault"
      >
        <svg
          aria-hidden="true"
          class="PodBrowser-root PodBrowser-fallback"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <p
        class="PodBrowser-root PodBrowser-detailText PodBrowser-body1"
        data-testid="agent-web-id"
      >
        http://example.com/webId#me
      </p>
      <button
        data-testid="remove-button"
        type="button"
      >
        Remove
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AgentAccess renders skeleton placeholders when profile is not available 1`] = `
<DocumentFragment>
  <span
    class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-pulse"
    style="width: 40px; height: 40px;"
  />
  <div
    class="PodBrowser-detailText"
  >
    <span
      class="PodBrowser-root PodBrowser-text PodBrowser-pulse"
      style="width: 100px;"
    />
  </div>
</DocumentFragment>
`;

exports[`AgentAccess user tries to change access for themselves checkboxes are disabled 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-root PodBrowser-circle PodBrowser-avatar"
  >
    <img
      alt="Alice"
      class="PodBrowser-img"
      src="http://example.com/alice.jpg"
    />
  </div>
  <p
    class="PodBrowser-root PodBrowser-detailText PodBrowser-body1"
    data-testid="agent-web-id"
  >
    Alice
  </p>
  <form
    class="PodBrowser-form"
  >
    <div
      class="PodBrowser-container"
    >
      <button
        class="PodBrowser-root PodBrowser-root PodBrowser-text PodBrowser-summary"
        data-testid="permissions-dropdown-button"
        tabindex="0"
        type="button"
      >
        <span
          class="PodBrowser-label"
        >
          <span />
          <span
            class="PodBrowser-endIcon PodBrowser-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="PodBrowser-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
              />
            </svg>
          </span>
        </span>
        <span
          class="PodBrowser-root"
        />
      </button>
      <section
        class="PodBrowser-selectionClosed"
      >
        <ul
          class="PodBrowser-root PodBrowser-padding"
        >
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root PodBrowser-disabled"
              data-testid="permission-checkbox-view"
            >
              <span
                aria-disabled="true"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled"
                tabindex="-1"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    disabled=""
                    name="view"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-disabled PodBrowser-body1"
              >
                View
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root PodBrowser-disabled"
              data-testid="permission-checkbox-edit"
            >
              <span
                aria-disabled="true"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled"
                tabindex="-1"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    disabled=""
                    name="edit"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-disabled PodBrowser-body1"
              >
                Edit
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root PodBrowser-disabled"
              data-testid="permission-checkbox-append"
            >
              <span
                aria-disabled="true"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled"
                tabindex="-1"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    disabled=""
                    name="append"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-disabled PodBrowser-body1"
              >
                Append
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root PodBrowser-disabled"
              data-testid="permission-checkbox-control"
            >
              <span
                aria-disabled="true"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled"
                tabindex="-1"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    disabled=""
                    name="control"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-disabled PodBrowser-body1"
              >
                Control
              </span>
            </label>
          </li>
        </ul>
        <button
          class="PodBrowser-button"
          type="submit"
        >
          Save
        </button>
      </section>
    </div>
  </form>
</DocumentFragment>
`;
